--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -31,12 +31,13 @@ lightbox: auto
 
 일대일 함수와 일대일 대응은 단사 함수와 전단사 함수의 차이와 같다. 
 
-
 :::{.column-margin}
 고등학교에서 함수를 배울 때 왜 "전사 함수", "단사 함수" 구별이 필요하지라는 의문을 가져 본 적이 있다. 이러한 분류가 카디널 수를 따질 결정적일 수 있다는 것은 뒤늦은 깨달음이리라... 
 :::
 
-![카디널 수에 따른 함수의 구분](images/four-functions.png){width=50%}
+::: {layout="[-25, 50, -25]"  layout-valign="bottom"}
+![카디널 수에 따른 함수의 구분](images/four-functions.png)
+:::
 
 단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)$가 $x$보다 크지 않아야 한다. 해당 형태의 함수가 존재할 필요 조건은 다음과 같다.  
 
