--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -76,15 +76,14 @@ $B$는 $x \in A$에는 들어 있지만 $f$에 의해 매핑된 원소에는 포
 
 $B$는 $A$의 원소들로 구성되어 있으므로 $B \in \mathcal P(A)$이다. $f$는 전사 함수이고 따라서 $\mathcal P(A)$에 속한 모든 원소에 대응하는 $a \in A$가 존재한다. 즉, $f(a) = B$인 $a$가 존재한다. 
 
-## Part 2-2
+### Part 2-2
 
-$a$는 $B$에 속하거나 혹은 그렇지 않거나 둘 중 하나에 해당해야 한다(배중률의 공리). 각각의 경우를 살펴보자. 
+$a$는 $B$에 속하거나 혹은 그렇지 않거나 둘 중 하나가 참이어야 한다. 각각의 경우를 살펴보자. 
 
+1. $a \in B$; 이 명제가 맞다면, $a \in f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(a) = B$이다; $a \in B.$ 따라서 모순이다. 
+2. $a \notin B$; 이 명제가 맞다면, $a \notin f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(A)$는 B에 원소여야 한다; $a \in B.$ 따라서 모순이다.
 
-1. $a \in B$; 이것이 맞다면, $a \in f(a)$가 성립한다. 그런데 정의에 따르면 $B$는 $a \notin f(a) = B$이다. 따라서 모순이다. 
-2. $a \notin B$; 이것이 맞다면, $a \notin f(a)$가 성립한다. 그런데 정의에 따르면 $a \in B$가 되어야 한다. 따라서 모순이다. 
-
-두 경우 모두 모순이 된다. 귀류법에 따라서, $|A| \neq |\mathcal P(A)|$가 성립한다. 앞서의 단사함수의 존재 증명과 결합하면 집합의 크기에 관해 칸토어의 정리가 성립한다; 
+두 경우 모두 모순이다. 귀류법에 따라 $|A| \neq |\mathcal P(A)|$가 참이다. 앞서 단사함수의 존재 증명과 함께 집합의 카디널 수에 관해 칸토어의 정리가 성립한다; 
 
 $$
 |A| < |\mathcal P (A)|.
