--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -15,10 +15,10 @@ lightbox: auto
 ## Prelim
 
 ### Cardinality
-집합이 '크다'는 것의 의미를 따져보자. 유한 집합의 경우 크다는 것의 의미는 자명하다. 무한 집합이 크다는 것은 어떻게 측정할 수 있을까? 일단 무한 집합에 대해서는 원소의 개수라는 개념을 쓸 없으니 대신 카디널 수(cardinality)를 쓴다. 무한 집합 $A$에 대해서 $|A|$라고 쓸 경우 이는 무한 집합의 크기, 즉 카디널 수를 의미한다. 
+집합이 '크다'는 것의 의미를 따져보자. 유한 집합의 경우 크다는 것의 의미는 자명하다. 무한 집합의 크기는 어떻게 비교할 수 있을까? 무한 집합에 대해서는 원소의 '개수'라는 개념을 쓸 수 없다. 대신 크기의 비교를 위해서 카디널 수(cardinality)라는 말을 쓴다. 무한 집합 $A$에 대해서 $|A|$라고 쓸 경우 이는 무한 집합의 크기, 즉 카디널 수를 의미한다. 
 
 :::{.column-margin}
-카디널 수에서 기준이 되는 것은 자연수의 집합이다. 자연수($\mathbb N$)는 가장 작은 무한 집합이다. 이 점을 기억하자. 
+카디널 수를 따질 때 기준이 되는 것은 자연수의 집합이다. 자연수($\mathbb N$)는 가장 작은 무한 집합이다. 만일 자연수 집합과 일대일 대응이 가능하다면 둘의 카디널 수는 같다. 
 :::
 
 ### Injection, Surjection, and Bijection 
@@ -29,7 +29,7 @@ lightbox: auto
 - 단사 함수(injective function): 일대일 함수(one-to-one function)
 - 전단사 함수(bijective function): 일대일 대응(one-to-one correspondence) one-to-one and onto 
 
-일대일 함수와 일대일 대응은 단사 함수와 전단사 함수의 차이와 같다. 
+일대일 함수와 일대일 대응은 단사 함수와 전단사 함수를 각각 뜻한다. 용어에 주의하자.  
 
 :::{.column-margin}
 고등학교에서 함수를 배울 때 왜 "전사 함수", "단사 함수" 구별이 필요하지라는 의문을 가져 본 적이 있다. 이러한 분류가 카디널 수를 따질 결정적일 수 있다는 것은 뒤늦은 깨달음이리라... 
@@ -39,15 +39,15 @@ lightbox: auto
 ![카디널 수에 따른 함수의 구분](images/four-functions.png)
 :::
 
-단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)$가 $x$보다 크지 않아야 한다. 해당 형태의 함수가 존재할 필요 조건은 다음과 같다.  
+단사 함수의 경우 정의역 $X$가 치역 $f(X)$보디 '크지' 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(X)$가 $X$보다 크지 않아야 한다. 해당 형태의 함수가 존재할 수 있는 정의역과 치역의 카디널 수에 관한 필요 조건은 다음과 같다.  
 
-- 전사 함수: $|x| \geq |f(x)|$
-- 단사 함수: $|x| \leq |f(x)|$
-- 전단사 함수: $|x| = |f(x)|$
+- 전사 함수: $|X| \geq |f(X)|$
+- 단사 함수: $|X| \leq |f(X)|$
+- 전단사 함수: $|X| = |f(X)|$
 
 ## Theorem 
 
-임의의 집합 $A$에 대해서 멱집합 $\mathcal P (A)$는 $A$보다 크다. 즉, 
+이제 칸토어의 정리를 살펴보자. 담고 있는 엄청난 내용과 비교해서 증명은 너무 간단하다. 임의의 집합 $A$에 대해서 멱집합 $\mathcal P (A)$는 $A$보다 크다. 즉, 
 
 $$
 |\mathcal P(A)| > |A|.
@@ -55,33 +55,35 @@ $$
 
 ## Proof 
 
+$A$가 유한 집합일 때는 자명하다. 즉, $N < 2^N$이 성립한다. 이하에서는 $A$가 무한 집합이라고 전제한다. 
+
 ### Part 1 
 
-$|A| \leq |\mathcal P (A)|$를 증명하자. 이는 $f: A \to \mathcal P(A)$를 만족하는 단사함수, 즉 일대일 함수가 존재하면 된다. $\mathcal P(A)$에는 $a \in A$의 $\{ a \}$가 포함된다. 따라서 $f(x) = \{ x \}$로 정의하면 된다. 
+$|A| \leq |\mathcal P (A)|$를 증명하자. 이는 $f: A \to \mathcal P(A)$를 만족하는 단사함수, 즉 일대일 함수가 존재하면 된다. $\mathcal P(A)$에는 $a \in A$의 $\{ a \}$가 포함된다. 따라서 $f(x) = \{ x \}$로 정의하면 $f$는 단수 함수이다. 
 
 ### Part 2-1
 $|A| \neq |\mathcal P (A)|$
 
-이는 귀류법(proof by contradiction)을 활용한다. 만일 등호를 만족하는 함수, 즉 전단사함수 존재한다고 하자. 여기 속하는 함수 $f: A \to \mathcal P(A)$가 전사함수(surjective function)가 된다. 이제 다음과 같은 집합 $B$를 빚어보자. 
+이는 귀류법(proof by contradiction)을 활용한다. 만일 등호를 만족하는 함수, 즉 전단사 함수 존재한다고 하자. 여기 속하는 함수 $f: A \to \mathcal P(A)$는 전사 함수이기도 하다. 이제 다음과 같은 집합 $B$를 빚어보자. 
 
 $$
 B = \{ x \in A| x \notin f(x) \}
 $$
 
-$B$는 $x \in A$에는 들어 있지만 $f$에 의해 매핑된 원소에는 포함되어 있지 않은 그런 집합을 의미한다. 
+$B$는 $x \in A$에는 들어 있지만 $f$에 의해 부분 집합의 집합으로 매핑된 원소(이 원소는 부분 집합이다)에는 속하지 않은 원소들의 집합이다. 
 
 :::{.column-margin}
 예를 들어보자. $A = \{1,2,3\}$일 때, $1 \to \emptyset$, $2 \to \{ 1, 3\}$, $3 \to \{ 2\}$와 같은 매핑을 의미한다. 
 :::
 
-$B$는 $A$의 원소들로 구성되어 있으므로 $B \in \mathcal P(A)$이다. $f$는 전사 함수이고 따라서 $\mathcal P(A)$에 속한 모든 원소에 대응하는 $a \in A$가 존재한다. 즉, $f(a) = B$인 $a$가 존재한다. 
+$B$는 $A$의 원소들로 구성되어 있으므로 $B \in \mathcal P(A)$이다. $f$는 가정에 따라서 전사 함수이고, 따라서 $\mathcal P(A)$에 속한 모든 원소에 대응하는 $a \in A$가 존재한다. 이때 집합 $B$에 대응하는 $A$의 원소를 $a$라고 하자. 즉, $f(a) = B$인 $a \in A$가 존재한다.  
 
 ### Part 2-2
 
 $a$는 $B$에 속하거나 혹은 그렇지 않거나 둘 중 하나가 참이어야 한다. 각각의 경우를 살펴보자. 
 
-1. $a \in B$; 이 명제가 맞다면, $a \in f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(a) = B$이다; $a \in B.$ 따라서 모순이다. 
-2. $a \notin B$; 이 명제가 맞다면, $a \notin f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(A)$는 B에 원소여야 한다; $a \in B.$ 따라서 모순이다.
+1. $a \in B$; 이 명제가 맞다면, $a \in f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(a) = B$이다; $a \notin B.$ 따라서 모순이다. 
+2. $a \notin B$; 이 명제가 맞다면, $a \notin f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(A)$는 B의 원소다; $a \in B.$ 따라서 모순이다.
 
 두 경우 모두 모순이다. 귀류법에 따라 $|A| \neq |\mathcal P(A)|$가 참이다. 앞서 단사함수의 존재 증명과 함께 집합의 카디널 수에 관해 칸토어의 정리가 성립한다; 
 
