--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -83,7 +83,7 @@ $B$는 $A$의 원소들로 구성되어 있으므로 $B \in \mathcal P(A)$이다
 $a$는 $B$에 속하거나 혹은 그렇지 않거나 둘 중 하나가 참이어야 한다. 각각의 경우를 살펴보자. 
 
 1. $a \in B$; 이 명제가 맞다면, $a \in f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(a) = B$이다; $a \notin B.$ 따라서 모순이다. 
-2. $a \notin B$; 이 명제가 맞다면, $a \notin f(a)$가 성립한다. 그런데 집합 B의 정의에 따르면 $a \notin f(A)$는 B의 원소다; $a \in B.$ 따라서 모순이다.
+2. $a \notin B$; 이 명제가 맞다면, $a \notin f(a)$가 성립한다. 그런데 집합 $B$의 정의($B$의 such that 이하)에 따르면 $a \notin f(a)$는 B의 원소다; $a \in B.$ 따라서 모순이다.
 
 두 경우 모두 모순이다. 귀류법에 따라 $|A| \neq |\mathcal P(A)|$가 참이다. 앞서 단사함수의 존재 증명과 함께 집합의 카디널 수에 관해 칸토어의 정리가 성립한다; 
 
