--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -55,25 +55,25 @@ $$
 
 ## Proof 
 
-$A$가 유한 집합일 때는 자명하다. 즉, $N < 2^N$이 성립한다. 이하에서는 $A$가 무한 집합이라고 전제한다. 
+$A$가 유한 집합일 때는 자명하다. 즉, $N < 2^N$ for $N \in \mathbb N$이 성립한다. 이하에서는 $A$가 무한 집합이라고 전제한다. 
 
 ### Part 1 
 
-$|A| \leq |\mathcal P (A)|$를 증명하자. 이는 $f: A \to \mathcal P(A)$를 만족하는 단사함수, 즉 일대일 함수가 존재하면 된다. $\mathcal P(A)$에는 $a \in A$의 $\{ a \}$가 포함된다. 따라서 $f(x) = \{ x \}$로 정의하면 $f$는 단수 함수이다. 
+$|A| \leq |\mathcal P (A)|$를 증명하자. 이는 $f: A \to \mathcal P(A)$를 만족하는 단사 함수, 즉 일대일 함수가 존재하면 된다. $\mathcal P(A)$에는 $a \in A$의 $\{ a \}$가 존재한다. $f(x) := \{ x \}$는 $X \to f(X)$인 단사 함수이다.  
 
 ### Part 2-1
 $|A| \neq |\mathcal P (A)|$
 
-이는 귀류법(proof by contradiction)을 활용한다. 만일 등호를 만족하는 함수, 즉 전단사 함수 존재한다고 하자. 여기 속하는 함수 $f: A \to \mathcal P(A)$는 전사 함수이기도 하다. 이제 다음과 같은 집합 $B$를 빚어보자. 
+이는 귀류법(proof by contradiction)을 활용한다. 양변의 카디널 수가 같은 경우, 즉 전단사 함수가 존재한다고 가정하자. 여기 속하는 함수 $f: A \to \mathcal P(A)$는 전사 함수이다. 이제 다음과 같은 집합 $B$를 빚어보자. 
 
 $$
 B = \{ x \in A| x \notin f(x) \}
 $$
 
-$B$는 $x \in A$에는 들어 있지만 $f$에 의해 부분 집합의 집합으로 매핑된 원소(이 원소는 부분 집합이다)에는 속하지 않은 원소들의 집합이다. 
+$B$는 $x \in A$에는 들어 있지만 $f$에 의해 부분 집합의 집합으로 짝지어진(mapping) 원소(이 원소는 '집합'이다)에는 속하지 않은 집합 $A$의 원소로 구성된 집합이다. 
 
 :::{.column-margin}
-예를 들어보자. $A = \{1,2,3\}$일 때, $1 \to \emptyset$, $2 \to \{ 1, 3\}$, $3 \to \{ 2\}$와 같은 매핑을 의미한다. 
+예를 들어보자. $A = \{1,2,3\}$일 때, $1 \to \emptyset$, $2 \to \{ 1, 3\}$, $3 \to \{ 2\}$와 같은 짝짓기를 의미한다. 
 :::
 
 $B$는 $A$의 원소들로 구성되어 있으므로 $B \in \mathcal P(A)$이다. $f$는 가정에 따라서 전사 함수이고, 따라서 $\mathcal P(A)$에 속한 모든 원소에 대응하는 $a \in A$가 존재한다. 이때 집합 $B$에 대응하는 $A$의 원소를 $a$라고 하자. 즉, $f(a) = B$인 $a \in A$가 존재한다.  
