--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -15,15 +15,13 @@ lightbox: auto
 ## Prelim
 
 ### Cardinality
-집합이 '크다'는 것의 의미를 따져보자. 유한 집합의 경우 크다는 것의 의미는 자명하다. 무한 집합의 크기는 어떻게 비교할 수 있을까? 무한 집합에 대해서는 원소의 '개수'라는 개념을 쓸 수 없다. 대신 크기의 비교를 위해서 카디널 수(cardinality)라는 말을 쓴다. 무한 집합 $A$에 대해서 $|A|$라고 쓸 경우 이는 무한 집합의 크기, 즉 카디널 수를 의미한다. 
+집합이 '크다'는 것의 의미를 따져보자. 유한 집합의 경우 크다는 뜻이 자명하다. 무한 집합의 크기는 어떻게 비교할 수 있을까? 무한 집합에 대해서는 원소의 '개수'라는 개념을 쓸 수 없다. 대신 크기의 비교를 위해서 카디널 수(cardinality)라는 말을 쓴다. 무한 집합 $A$에 대해서 $|A|$라고 쓸 경우 이는 무한 집합의 크기, 즉 카디널 수를 의미한다. 
 
-:::{.column-margin}
-카디널 수를 따질 때 기준이 되는 것은 자연수의 집합이다. 자연수($\mathbb N$)는 가장 작은 무한 집합이다. 만일 자연수 집합과 일대일 대응이 가능하다면 둘의 카디널 수는 같다. 
-:::
+자세한 내용을 생략하고 말한다면, 카디널 수는 자연수 집합을 기준으로 집합의 크기를 가늠한다. 자연수($\mathbb N$)는 가장 작은 무한 집합이다. 만일 자연수 집합과 일대일 대응이 가능하다면 둘의 카디널 수는 같다. 즉 둘은 같은 크기의 집합이 된다. 
 
 ### Injection, Surjection, and Bijection 
 
-카디널 수와 밀접하게 연결된 함수의 분류는 아래의 그림과 같다. 편의상 용어 및 번역어 정리하고 가자. 
+집합의 크기를 재려면 집합과 집합 사이에 어떤 짝짓기(mapping)이 가능한지를 살펴야 한다. 용어 및 번역어 먼저 정리하자. 
 
 - 전사 함수(surjective function): onto function
 - 단사 함수(injective function): 일대일 함수(one-to-one function)
@@ -32,14 +30,14 @@ lightbox: auto
 일대일 함수와 일대일 대응은 단사 함수와 전단사 함수를 각각 뜻한다. 용어에 주의하자.  
 
 :::{.column-margin}
-고등학교에서 함수를 배울 때 왜 "전사 함수", "단사 함수" 구별이 필요하지라는 의문을 가져 본 적이 있다. 이러한 분류가 카디널 수를 따질 결정적일 수 있다는 것은 뒤늦은 깨달음이리라... 
+고등학교에서 함수를 배울 때 "전사 함수", "단사 함수"와 같은 구별이 필요한 이유는 별로 강조하지 않는다. 이러한 분류가 카디널 수를 따질 필요하다는 것을 미리 알았다면... 
 :::
 
 ::: {layout="[-25, 50, -25]"  layout-valign="bottom"}
 ![카디널 수에 따른 함수의 구분](images/four-functions.png)
 :::
 
-단사 함수의 경우 정의역 $X$가 치역 $f(X)$보디 '크지' 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(X)$가 $X$보다 크지 않아야 한다. 해당 형태의 함수가 존재할 수 있는 정의역과 치역의 카디널 수에 관한 필요 조건은 다음과 같다.  
+단사 함수의 경우 정의역 $X$가 치역 $f(X)$ 보다 '크지' 않아야 존재할 수 있다. 전사함수가 존재하려면 반대로 $f(X)$가 $X$ 보다 크지 않아야 한다. 해당 함수가 존재할 수 있는 정의역과 치역의 크기에 관한 필요 조건은 다음과 같다.  
 
 - 전사 함수: $|X| \geq |f(X)|$
 - 단사 함수: $|X| \leq |f(X)|$
@@ -47,7 +45,7 @@ lightbox: auto
 
 ## Theorem 
 
-이제 칸토어의 정리를 살펴보자. 담고 있는 엄청난 내용과 비교해서 증명은 너무 간단하다. 임의의 집합 $A$에 대해서 멱집합 $\mathcal P (A)$는 $A$보다 크다. 즉, 
+이제 칸토어의 정리를 살펴보자. 정리의 대단한 내용과 비교해서 증명은 매우 간단하다. 임의의 집합 $A$에 대해서 멱집합 $\mathcal P (A)$는 $A$보다 크다. 즉, 
 
 $$
 |\mathcal P(A)| > |A|.
@@ -61,7 +59,7 @@ $A$가 유한 집합일 때는 자명하다. 즉, $N < 2^N$ for $N \in \mathbb N
 
 $|A| \leq |\mathcal P (A)|$를 증명하자. 이는 $f: A \to \mathcal P(A)$를 만족하는 단사 함수, 즉 일대일 함수가 존재하면 된다. $\mathcal P(A)$에는 $a \in A$의 $\{ a \}$가 존재한다. $f(x) := \{ x \}$는 $X \to f(X)$인 단사 함수이다.  
 
-### Part 2-1
+### Part 2.1
 $|A| \neq |\mathcal P (A)|$
 
 이는 귀류법(proof by contradiction)을 활용한다. 양변의 카디널 수가 같은 경우, 즉 전단사 함수가 존재한다고 가정하자. 여기 속하는 함수 $f: A \to \mathcal P(A)$는 전사 함수이다. 이제 다음과 같은 집합 $B$를 빚어보자. 
@@ -76,11 +74,11 @@ $B$는 $x \in A$에는 들어 있지만 $f$에 의해 부분 집합의 집합으
 예를 들어보자. $A = \{1,2,3\}$일 때, $1 \to \emptyset$, $2 \to \{ 1, 3\}$, $3 \to \{ 2\}$와 같은 짝짓기를 의미한다. 
 :::
 
-$B$는 $A$의 원소들로 구성되어 있으므로 $B \in \mathcal P(A)$이다. $f$는 가정에 따라서 전사 함수이고, 따라서 $\mathcal P(A)$에 속한 모든 원소에 대응하는 $a \in A$가 존재한다. 이때 집합 $B$에 대응하는 $A$의 원소를 $a$라고 하자. 즉, $f(a) = B$인 $a \in A$가 존재한다.  
+$B$는 $A$의 원소들로 구성되어 있으므로 당연히 $B \in \mathcal P(A)$이다. $f$는 가정에 따라서 전사 함수이다. 따라서 $\mathcal P(A)$에 속한 모든 원소에 대응하는 $a \in A$가 반드시 존재한다. 이때 집합 $B$에 대응하는 $A$의 원소를 $a$라고 하자. 즉, $f(a) = B$인 $a \in A$가 존재한다.  
 
-### Part 2-2
+### Part 2.2
 
-$a$는 $B$에 속하거나 혹은 그렇지 않거나 둘 중 하나가 참이어야 한다. 각각의 경우를 살펴보자. 
+$a$는 $B$에 속하거나 혹은 그렇지 않거나 둘 중 하나는 참이어야 한다. 각각의 경우를 살펴보자. 
 
 1. $a \in B$; 이 명제가 맞다면, $a \in f(a)$가 성립한다. 그런데 집합 B의 정의($B$의 such that)에 따르면 $a \notin f(a) = B$이다; $a \notin B.$ 따라서 모순이다. 
 2. $a \notin B$; 이 명제가 맞다면, $a \notin f(a)$가 성립한다. 그런데 집합 $B$의 정의에 따르면 $a \notin f(a)$는 B의 원소다; $a \in B.$ 따라서 모순이다.
