--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -24,7 +24,7 @@ lightbox: auto
 ## 용어 정리 
 
 - 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률에 따르면 명제는 참 혹은 거짓 둘 중에 하나만 될 수 있다. 둘 다 될 수 있거나 둘 다 아니거나의 상태는 없다고 가정한다.
-- 진리 집합: "모든 인간은 죽는다"와 같은 종류의 명제 조건이 붙지 않는다. 하지만 명제에 조건을 달아서 해당 조건을 충족하는 대상을 살피면 편리한 경우가 있다. 이를 명제의 조건이라고 하자. 이때 조건 명제의 조건을 충족하는 어떤 대상, 즉 조건을 참으로 만드는 대상을 모아 놓은 집합을 '진리 집합'이라고 부른다.
+- 진리 집합: "모든 인간은 죽는다"와 같은 종류의 명제 조건이 붙지 않는다. 하지만 명제에 조건을 달아서 해당 조건을 충족하는 대상을 살피면 편리한 경우가 있다. 이를 명제의 조건(predicate)이라고 하자. 이때 명제의 조건을 충족하는 어떤 대상, 즉 조건을 참으로 만드는 대상을 모아 놓은 집합을 '진리 집합'이라고 부른다.
 
 명제를 진리 집합과 연결해 생각하면 편리한 경우가 있다. 명제의 여러가지 조작을 집합으로 바꿔 생각하면 조금 이해가 쉬워진다. 우리가 잘 알고 익숙한 '벤 다이어그램'을 활용할 수 있기 때문에 더 쉽게 응용할 수 있다는 장점도 있다. 
 
@@ -35,6 +35,7 @@ lightbox: auto
 - $p \implies q$
 - If $p$, then $q$.
 - $p$ implies $q$
+- $p$ is sufficient condition for $q$.
 
 일단 이 관계는 형식 논리상의 관계이지 '인과' 관계가 아니다. 즉, 형식 논리상 $p$라는 명제와 $q$라는 명제의 관계를 기계적으로 서술한다. 진리 집합이 존재한다면, $p$의 진리집합 $P$와 $q$의 진리집합 $Q$에 대해서 $P \subset Q$가 성립한다는 의미로 이해할 수 있겠다. 
 
@@ -56,7 +57,7 @@ lightbox: auto
 
 ### 공진리
 
-아마도 '공진리(vacuous truth)' 혹은 '항진'의 문제가 거슬릴 것이다. 논리로 보면 조금 이상해보일 수 있지만 진리집합으로 보면 이해가 쉽다. $p$가 F라는 것은 $P=\emptyset$을 의미한다. 집합의 공리상 공집합은 모든 집합의 부분 집합이 될 수 있다. 
+'공진리(vacuous truth)', '항진' 혹은 '공허 참'의 문제가 거슬릴 수 겠다. 논리로 보면 조금 이상해보일 수 있지만 진리집합으로 보면 상대적으로 이해가 쉽다. $p$가 F라는 것은 $P=\emptyset$을 의미한다. 집합의 공리에 따르면 공집합은 모든 집합의 부분 집합이다. 
 
 ### 조건 명제의 부정 
 
