--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -1,6 +1,6 @@
 ---
 title: 조건 명제 
-description: $\implies$를 생각해보자
+description: $\implies$를 따져보자
 author: "JS HUHH"
 date: "06/26/2023"
 image: "images/proof.jfif"
@@ -12,7 +12,7 @@ filters:
 lightbox: auto
 ---
 
-## tl; dr
+## TL; DR
 
 - 조건 명제가 의미하는 것을 다시 새겨 보고, 조건 명제의 '부정'도 따져보자. 
 - 함수 극한의 엡실론-델타 정의를 통해 조건 명제의 의미를 다시 확인해보자. 
@@ -23,7 +23,7 @@ lightbox: auto
 
 ## 용어 정리 
 
-- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률에 따르면 명제는 참 혹은 거짓 둘 중에 하나만 될 수 있다. 둘 다 될 수 있거나 둘 다 아니거나의 상태는 없다고 가정한다.
+- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률에 따르면 명제는 참 혹은 거짓 둘 중에 하나만 될 수 있다. 둘 다 될 수 있거나 둘 다 아니거나가 되는 상태는 없다고 가정한다.
 - 진리 집합: "모든 인간은 죽는다"와 같은 종류의 명제 조건이 붙지 않는다. 하지만 명제에 조건을 달아서 해당 조건을 충족하는 대상을 살피면 편리한 경우가 있다. 이를 명제의 조건(predicate)이라고 하자. 이때 명제의 조건을 충족하는 어떤 대상, 즉 조건을 참으로 만드는 대상을 모아 놓은 집합을 '진리 집합'이라고 부른다.
 
 명제를 진리 집합과 연결해 생각하면 편리한 경우가 있다. 명제의 여러가지 조작을 집합으로 바꿔 생각하면 조금 이해가 쉬워진다. 우리가 잘 알고 익숙한 '벤 다이어그램'을 활용할 수 있기 때문에 더 쉽게 응용할 수 있다는 장점도 있다. 
