--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -19,18 +19,18 @@ lightbox: auto
 
 ## 조건 명제 
 
-조건 명제는 수학에서 많이 사용된다. 물론 일상어에도 많이 활용된다. 그런데 가끔 살짝 어떤 대목이 뒤틀리며 혼란의 순간이 찾아오기도 한다. 대체로 이런 순간을 뭉개고 가지만, 이번에 한번 정리해보기로 했다. 
+조건 명제는 수학에서 많이 사용된다. 물론 일상어에도 많이 활용된다. 그런데 가끔 살짝 어떤 대목이 뒤틀리며 혼란의 순간이 찾아오기도 한다. 한번 정리해보기로 했다. 
 
 ## 용어 정리 
 
-- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률에 따르면 명제는 참 혹은 거짓 둘 중에 하나만 될 수 있다. 둘 다 될 수 있거나 둘 다 아니거나가 되는 상태는 없다고 가정한다.
-- 진리 집합: "모든 인간은 죽는다"와 같은 종류의 명제 조건이 붙지 않는다. 하지만 명제에 조건을 달아서 해당 조건을 충족하는 대상을 살피면 편리한 경우가 있다. 이를 명제의 조건(predicate)이라고 하자. 이때 명제의 조건을 충족하는 어떤 대상, 즉 조건을 참으로 만드는 대상을 모아 놓은 집합을 '진리 집합'이라고 부른다.
+- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률(law of excluded middle)에 따르면 명제는 참 혹은 거짓 둘 중에 하나만 될 수 있다. 둘 다 될 수 있거나 둘 다 아니거나가 되는 상태는 없다고 가정한다.
+- 진리 집합: "모든 인간은 죽는다"와 같은 종류의 명제 조건이 붙지 않는다. 하지만 명제에서 주어와 술어를 분리하고 술어를 충족하는 일정한 대상을 살피면 편리한 경우가 있다. 이를 명제의 술어(predicate)라고 하자. 이때 명제의 술어를 충족하는 어떤 대상, 즉 술어를 참으로 만드는 대상을 모아 놓은 집합을 '진리 집합'이라고 정의한다.
 
-명제를 진리 집합과 연결해 생각하면 편리한 경우가 있다. 명제의 여러가지 조작을 집합으로 바꿔 생각하면 조금 이해가 쉬워진다. 우리가 잘 알고 익숙한 '벤 다이어그램'을 활용할 수 있기 때문에 더 쉽게 응용할 수 있다는 장점도 있다. 
+명제를 진리 집합과 연결해 생각하면 편리한 경우가 있다. 명제의 여러가지 조작을 집합으로 바꿔 생각하면 조금 이해가 쉬워진다. 우리가 잘 알고 익숙한 '벤 다이어그램'을 활용할 수 있기 때문이다.
 
 ## 조건 명제(conditional proposition)
 
-'조건 명제'는 '조건'과는 조금 다르다. 일상어의 감각과는 조금 다르니 유의해두도록 하자. 조건 명제란 우리가 흔히 "만일 $p$이라면, $q$가 성립한다"와 같이 표현하는 것이다. 몇 가지 표현을 알아보자. 
+'조건 명제'는 '조건'과는 조금 다르다. 일상어의 감각과는 조금 다르니 유의해두도록 하자. 조건 명제란 우리가 흔히 "만일 $p$이라면, $q$가 성립한다"와 같이 표현하는 것이다. 동치에 해당하는 몇 가지 표현을 알아보자. 
 
 - $p \implies q$
 - If $p$, then $q$.
