--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -92,7 +92,7 @@ lightbox: auto
 
 ### 함수의 극한이 존재하지 않는 경우 
 
-함수의 극한에 관한 정의의 '부정형(negation)'을 정의해보자. 그리고 이 부정의 정의가 참이 되는 경우를 따져볼 것이다. 정의가 함축(implication, $\implies$)의 형태를 취하고 있으므로 이 부정형을 만들 때 주의를 기울여야 한다.
+함수의 극한에 관한 정의의 '부정형(negation)'을 정의해보자. 그리고 이 부정의 정의가 참이 되는 경우를 따져볼 것이다. 정의가 함축(implication, $\implies$)의 형태를 취하고 있으므로 부정형을 만들 때 앞서 언급한 방식을 따르면 된다. 
 
 $0 < |x-a|< \delta$을 만족하는 모든 $\delta>0$에 대해서 다음을 만족하는 어떤 $\epsilon>0$와 $x \in \mathbb R$이 존재한다; $|f(x) - L| \geq \epsilon$. 
 
@@ -102,8 +102,6 @@ $0 < |x-a|< \delta$을 만족하는 모든 $\delta>0$에 대해서 다음을 만
 - $|f(x)-L|$ 값을 **어떤** $\epsilon$ 보다 낮게 줄일 수 없다. 
 
 이 경우는 $\lim_{x \to a}f(x)$는 존재하지 않는다. 
-
-주의 깊게 볼 지점이 있다. $p \implies q$에서 $P$의 모든 경우에 해당 조건 명제를 만족해야 한다. 따라서 이 형태는 암묵적으로 $x$에 대해서 $\forall$의 전칭 명제를 지닌다. 한편 조건 명제의 부정형의 경우 $x$에 대해서 $\forall$의 전칭 한정기호는 $\exists$의 존재 한정기호가 된다. 
 
 ## 진리 집합 
 
