--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -14,30 +14,30 @@ lightbox: auto
 
 ## TL; DR
 
-- 조건 명제가 의미하는 것을 다시 새겨 보고, 조건 명제의 '부정'도 따져보자. 
-- 함수 극한의 엡실론-델타 정의를 통해 조건 명제의 의미를 다시 확인해보자. 
+- 조건 명제가 의미하는 것을 확인해보고, 조건 명제의 '부정'도 도출해보자. 
+- 함수 극한의 엡실론-델타 정의를 통해 조건 명제의 의미를 연습해보자. 
 
 ## 조건 명제 
 
-조건 명제는 수학에서 많이 사용된다. 물론 일상어에도 많이 활용된다. 그런데 가끔 살짝 어떤 대목이 뒤틀리며 혼란의 순간이 찾아오기도 한다. 한번 정리해보기로 했다. 
+조건 명제는 잘 아는 듯싶지만, 내게는 가끔 혼란의 시간이 찾아오더라. 이 기회에 생각나는 대로 한번 정리해 보겠다.
 
 ## 용어 정리 
 
-- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률(law of excluded middle)에 따르면 명제는 참 혹은 거짓 둘 중에 하나만 될 수 있다. 둘 다 될 수 있거나 둘 다 아니거나가 되는 상태는 없다고 가정한다.
-- 진리 집합: "모든 인간은 죽는다"와 같은 종류의 명제 조건이 붙지 않는다. 하지만 명제에서 주어와 술어를 분리하고 술어를 충족하는 일정한 대상을 살피면 편리한 경우가 있다. 이를 명제의 술어(predicate)라고 하자. 이때 명제의 술어를 충족하는 어떤 대상, 즉 술어를 참으로 만드는 대상을 모아 놓은 집합을 '진리 집합'이라고 정의한다.
+- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률(law of excluded middle)에 따르면 명제는 참혹은 거짓 중 하나만 될 수 있다. 둘 모두가 참이거나 둘 모두 거짓인 상태는 없다고 가정한다.
+- 진리 집합: "모든 인간은 죽는다"와 같은 명제는 특별한 조건 없이 참과 거짓을 할당할 수 있다. 명제에서 주어와 술어를 분리하고 술어를 충족하는 일정한 대상을 살피면 편리할 수 있다. 이를 명제가 나타내고 싶은 어떤 조건을 술어(predicate)라고 부른다. 그리고 명제의 술어를 충족하는 어떤 대상, 즉 술어를 충족하는 주어를 모은 집합을 '진리 집합'이라고 정의한다.
 
-명제를 진리 집합과 연결해 생각하면 편리한 경우가 있다. 명제의 여러가지 조작을 집합으로 바꿔 생각하면 조금 이해가 쉬워진다. 우리가 잘 알고 익숙한 '벤 다이어그램'을 활용할 수 있기 때문이다.
+명제를 진리 집합과 연결해 생각하면 편리할 때가 있다. 명제의 여러 가지 조작을 집합으로 바꿔 생각하면 익숙한 '벤 다이어그램'을 활용할 수 있다.
 
 ## 조건 명제(conditional proposition)
 
-'조건 명제'는 '조건'과는 조금 다르다. 일상어의 감각과는 조금 다르니 유의해두도록 하자. 조건 명제란 우리가 흔히 "만일 $p$이라면, $q$가 성립한다"와 같이 표현하는 것이다. 동치에 해당하는 몇 가지 표현을 알아보자. 
+조건 명제는 "만일 $p$이라면, $q$가 성립한다"와 같이 표현한다. 동일한 의미를 지니는 표현을 몇 가지 더 알아보자. 
 
 - $p \implies q$
 - If $p$, then $q$.
 - $p$ implies $q$
 - $p$ is sufficient condition for $q$.
 
-일단 이 관계는 형식 논리상의 관계이지 '인과' 관계가 아니다. 즉, 형식 논리상 $p$라는 명제와 $q$라는 명제의 관계를 기계적으로 서술한다. 진리 집합이 존재한다면, $p$의 진리집합 $P$와 $q$의 진리집합 $Q$에 대해서 $P \subset Q$가 성립한다는 의미로 이해할 수 있겠다. 
+일단 이 관계는 형식 논리의 관계이지 '인과' 관계가 아니다. 즉, 형식 논리상 $p$라는 명제와 $q$라는 명제의 관계를 기계적으로 서술한다. 진리 집합이 존재한다면, $p$의 진리집합 $P$와 $q$의 진리집합 $Q$에 대해서 $P \subset Q$가 성립한다는 의미로 이해할 수 있겠다. 
 
 조건 명제에는 숨은 '함정'이 있다. $p \implies q$는 진리집합으로 본다면 $P$에 속하는 모든 원소는 $Q$에 속해야 한다는 뜻이다. 즉, $p$라는 명제를 만족하는 모든 경우에 대해서 $q$가 만족해야 한다.
 
@@ -57,20 +57,20 @@ lightbox: auto
 
 ### 공진리
 
-'공진리(vacuous truth)', '항진' 혹은 '공허 참'의 문제가 거슬릴 수 겠다. 논리로 보면 조금 이상해보일 수 있지만 진리집합으로 보면 상대적으로 이해가 쉽다. $p$가 F라는 것은 $P=\emptyset$을 의미한다. 집합의 공리에 따르면 공집합은 모든 집합의 부분 집합이다. 
+'공진리(vacuous truth)', '항진' 혹은 '공허 참'의 문제를 살펴보고 가자. 논리로는 이해가 쉽지 않을 수 있지만 진리집합으로 보면 상대적으로 이해가 쉽다. $p$가 F라는 것은 $P=\emptyset$을 의미한다. 집합의 공리에 따르면 공집합은 모든 집합의 부분 집합이다. 따라서 공허 참의 조건 명제는 언제나 참이다.  
 
 ### 조건 명제의 부정 
 
-조건 명제의 '부정'은 어떻게 될까? 조건 명제를 $p \implies q$의 형태로 놓고 보면 부정 명제를 만들기 까다로울 수 있다. 대신 $\neg p \lor q$의 부정 명제를 만들어보자. $\neg(\neg p \lor q) = p \land \neg q$가 된다. 
+조건 명제의 '부정'은 어떻게 될까? 조건 명제를 $p \implies q$의 형태로 놓고 부정 명제를 떠올리기는 쉽지 않다. 대신 $\neg p \lor q$의 부정 명제를 만들어보자. $\neg(\neg p \lor q) = p \land \neg q$가 된다. 
 
 직관적으로 생각해보자. 배중률에 따르면 $p \implies q$가 성립하지 않는 경우가 단 하나라도 존재하면 해당 부정형이 참이 된다. 즉, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \implies q$에서 $p$가 $\forall$의 전칭 한정기호를 달고 있다면, 조건 명제의 부정형에서 $p$는 $\exists$의 존재 한정기호 달고 있다. 진리 집합으로 서술하면 $P \cap Q^C \neq \emptyset$이 성립하면 된다.
 
 ## 함수의 극한 
 
-'함수의 극한'의 정의에 관해서 살펴보자. 한번쯤 좌절해봤다는 엡실론-델타 정의는 다음과 같다. $\lim_{x \to a} f(x) = L$의 정의는 다음과 같다. 
+한번쯤 좌절해봤다는 함수 극한, $\lim_{x \to a} f(x) = L$, 에 관한 엡실론-델타 논법은 다음과 같다.
 
 :::{.column-margin}
-엡실론-델타의 정식화는 대략 코시(Cauchy)로 거슬러 올라간다. 그는 $\epsilon$을 error의 의미로 $\delta$를 distance의 의미로 썼다고 한다. 즉, 목표가 되는 타겟 $f(x)$의 '오차'를 일정한 범위 이하로 줄이기 위해 필요한 $a$ 주변의 '거리'로 느슨하게 외우면 괜찮을 듯 싶다. 
+엡실론-델타 논법의 정식화는 대략 코시(Cauchy)로 거슬러 올라간다. 그는 $\epsilon$을 error의 의미로 $\delta$를 distance의 의미로 썼다고 한다. 즉, 목표가 되는 타겟 $f(x)$의 '오차'를 일정한 범위 이하로 줄이기 위해 필요한 $a$ 주변의 '거리'로 느슨하게 외우면 괜찮을 듯 싶다. 
 :::
 
 > 모든 $\epsilon > 0$에 대해서, 다음을 만족하는 $\delta > 0$가 존재한다; $x \in \mathbb R$인 모든 $x$에 대해서 $0 < |x - a| < \delta$ $\implies$ $|f(x)-L| < \epsilon$.
@@ -105,7 +105,7 @@ $0 < |x-a|< \delta$을 만족하는 모든 $\delta>0$에 대해서 다음을 만
 
 ## 진리 집합 
 
-복습을 겸해서 진리 집합으로 다시 따져보도록 하자. 진리 집합은 조건제시법(set builder notation)을 통해 표현한다. 
+진리 집합으로 다시 따져보도록 하자. 진리 집합은 조건제시법(set builder notation)을 통해 표현한다. 
 
 $$
 \begin{aligned}
