--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -94,5 +94,5 @@ $$
 이 정리 참 아름답다. '전사 함수' $f(X)$에 짝지워진 치역에 존재하는 어떤 원소를 폭탄 삼아 잘못된 전제에서 출발한 명제를 폭파시키는 방식의 절묘한 논법이다. 자세히 보면 이 정리는 러셀의 역설과 꽤 닮았다. 러셀이 칸토어의 해당 정리를 먼저 봤다고 하니, 레셀의 아이디어가 칸토어에서 왔다고 볼 수도 있을 듯 싶다. 
 
 :::{.column-margin}
-[여기](https://plato.stanford.edu/entries/russell-paradox/)를 참고하자. 소박한 집합론(naive set theory)에 따르면 특정한 특성을 바탕으로 집합을 정리할 수 있다. 하지만 이러한 공리에 구멍이 있음을 러셀이 발견했다. 즉, $\pi(x)$라는 특성은 $x \in x$라고 하자. $\pi(x)$는 집합 자체가 그 자신의 원소가 되는 특성까지 포함한다. 이제 $R = \{ x: \neg \pi(x) \}$라고 하자. 이제 $R \in R$을 만족한다고 하자. $R$의 정의상 $R \notin R$이어야 한다. 따라서 모순이다. 만일 $R \notin R$이라고 하자. $R$의 정의상 $R \in R$이어야 한다. 따라서 모순이다. 
+[여기](https://plato.stanford.edu/entries/russell-paradox/)를 참고하자. 소박한 집합론(naive set theory)에 따르면 특정한 특성을 바탕으로 집합을 정리할 수 있다. 하지만 이러한 공리에 구멍이 있음을 러셀이 발견했다. 즉, $\phi(x)$라는 특성은 $x \in x$라고 하자. $\pi(x)$는 집합 자체가 그 자신의 원소가 되는 특성까지 포함한다. 이제 $R = \{ x: \neg \phi(x) \}$라고 하자. 이제 $R \in R$을 만족한다고 하자. $R$의 정의상 $R \notin R$이어야 한다. 따라서 모순이다. 만일 $R \notin R$이라고 하자. $R$의 정의상 $R \in R$이어야 한다. 따라서 모순이다. 
 :::
