--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -34,7 +34,7 @@ lightbox: auto
 
 - $p \implies q$
 - If $p$, then $q$.
-- $p$ implies $q$
+- $p$ implies $q$.
 - $p$ is sufficient condition for $q$.
 
 일단 이 관계는 형식 논리의 관계이지 '인과' 관계가 아니다. 즉, 형식 논리상 $p$라는 명제와 $q$라는 명제의 관계를 기계적으로 서술한다. 진리 집합이 존재한다면, $p$의 진리집합 $P$와 $q$의 진리집합 $Q$에 대해서 $P \subset Q$가 성립한다는 의미로 이해할 수 있겠다. 
@@ -83,12 +83,14 @@ lightbox: auto
 
 > $(\forall \epsilon >0)(\exists \delta >0)(\forall x \in \mathbb R)(0 < |x-a| < \delta \implies |f(x) - L|<\epsilon)$
 
+> $(\forall \epsilon >0)(\forall x \in \mathbb R)(\exists \delta: 0 < |x-a| < \delta \implies |f(x) - L|<\epsilon)$
+
 하나씩 끊어서 말로 살펴보자. 
 
 - $x=a$ 주변으로 양쪽으로 **어떤** $\delta$ 크기의 구간을 잡는다.  
 - 해당 구간에 속하는 **모든** $x$를 고려하자. 
 - $x \to a$ 일 때 함수 $f(x)$의 극한값을 $L$이라고 하자. 
-- $\delta$를 조정해서 $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 **모든** $\epsilon>0$보다 작게 만들 수 있다. 
+- $\delta$를 조정해서 $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 **모든** $\epsilon>0$보다 작게 만들 수 있다. 즉, 조건을 만족하는 $\delta$가 존재한다. 
 
 ### 함수의 극한이 존재하지 않는 경우 
 
@@ -109,16 +111,22 @@ $0 < |x-a|< \delta$을 만족하는 모든 $\delta>0$에 대해서 다음을 만
 
 $$
 \begin{aligned}
-P & = \{x: \exists\delta > 0 \text{ s.t. } |x - a| < \delta \} \\
-Q & = \{x: \forall\epsilon > 0 \text{ s.t. } |f(x) - L| < \epsilon \} 
+P & = \{x|~\exists\delta > 0:~|x - a| < \delta \} \\
+Q & = \{x \vert ~\forall\epsilon > 0:~|f(x) - L| < \epsilon \} 
 \end{aligned}
 $$
 
-함수 극한의 정의는 진리 집합으로는 $P \subset Q$를 의미한다. 이제 $\neg q$, 즉 $Q^C$를 보자.
+첫번째 진리 집합을 말로 풀어보자. $|$이하의 조건을 만족하는 $x$를 의미한다. $\exists \delta$ 조건이 있기 때문에 해당 $x$ 값은 $\delta$에 의존하게 된다.함수 극한의 정의는 진리 집합으로는 $P \subset Q$를 의미한다. 
+
+$\neg q$, 즉 $Q^C$도 정의해보자.
 
 $$
-Q^C = \{x: \exists\epsilon \text{ s.t. } |f(x) - L| \geq \epsilon \}
+Q^C = \{x|~\exists\epsilon>0:~ |f(x) - L| \geq \epsilon \}
 $$
+
+:::{.column-margin}
+조건제시법을 쓸 때 $|$과 $:$는 차이가 있을까? 별 차이가 없다는 게 중론인 듯 싶다. 영어로 옮기면 "such that(s.t.)"에 해당한다. 사례처럼 "s.t."이 중복되면 번갈아서 써주면 어떨까 싶다. 
+:::
 
 여기서 $Q^C$를 정의할 때 $Q$의 전체 조건 $\forall \epsilon$이 존재 조건 $\exists \epsilon$으로 바뀌게 된다는 점을 눈여겨 보도록 하자. $p \implies q$의 부정 명제는 $p \land \neg q$가 된다. 진리집합으로 본다면 다음과 같다; $P \cap Q^C$. 만일 이 집합이 공집합이 아니라면 정의상 함수의 극한은 존재하지 않는다. 
 
