--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -38,10 +38,10 @@ lightbox: auto
 
 ![카디널 수에 따른 함수의 구분](images/four-functions.png){width=50%}
 
-단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)$가 $x$보다 크지 않아야 한다. 즉, 
+단사 함수의 경우 $x$가 $f(x)$ 크지 않아야 존재할 수 있다. 전사함수의 경우 반대로 $f(x)$가 $x$보다 크지 않아야 한다. 즉, 카디널 수의 입장에서 각각의 함수가 될 필요 조건은 아래와 같다. 
 
-- 단사 함수: $|x| \leq |f(x)|$
 - 전사 함수: $|x| \geq |f(x)|$
+- 단사 함수: $|x| \leq |f(x)|$
 - 전단사 함수: $|x| = |f(x)|$
 
 ## Theorem 
@@ -61,7 +61,7 @@ $|A| \leq |\mathcal P (A)|$를 증명하자. 이는 $f: A \to \mathcal P(A)$를 
 ### Part 2-1
 $|A| \neq |\mathcal P (A)|$
 
-이는 귀류법을 활용한다. 만일 등호를 만족하는 함수, 즉 전단사함수 존재한다고 하자. 여기 속하는 함수 $f: A \to \mathcal P(A)$가 전사함수(surjective function)가 된다. 이제 다음과 같은 집합 $B$를 빚어보자. 
+증명은 귀류법을 활용한다. 만일 등호를 만족하는 함수, 즉 전단사 함수가 존재한다고 하자. 여기 속하는 함수 $f: A \to \mathcal P(A)$는 전사 함수다. 이제 다음과 같은 집합 $B$를 빚어보자. 
 
 $$
 B = \{ x \in A| x \notin f(x) \}
