--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -97,7 +97,7 @@ $$
 
 이제 $R \in R$을 만족한다고 하자. 그런데 $R$의 정의상 $R \notin R$이어야 한다. 따라서 모순이다. 만일 $R \notin R$이라고 하자. $R$의 정의상 $R \in R$이어야 한다. 따라서 모순이다. 소박한 집합론의 주장과 달리 집합으로 정의될 수 없는 특징 혹은 대상이 존재함을 러셀의 역설이 보여준 셈이다. 
 
-조금 말로 풀어보자. '모든' 것을 포함하는 집합이 존재한다면, 그 자신을 포함하지 않는 집합을 정의할 때 문제가 생긴다. 러셀의 역설의 사례로 많이 언급되는 경우들이 거의 이런 '재귀적'인 특징을 지니고 있다. 마을에 존재하는 유일한 이발사 갑은 스스로 이발을 하지 않는 모든 사람을 이발하는 사람이다. 그렇다면 이발사 갑은 자신을 이발할 수 있는가? 할 수 없다. 그는 스스로 이발을 하지 않는 모든 사람을 이발하기 때문이다. 그렇다면 남에게 이발을 부탁할 수 있는가? 그럴 수도 없다. 스스로 이발을 하지 않는 모든 사람을 이발해야 하기 때문이다. 
+조금 말로 풀어보자. **모든** 것을 포함하는 집합이 존재한다면, 그 자신을 포함하지 않는 집합을 정의할 때 문제가 생긴다. 러셀의 역설의 사례로 많이 언급되는 경우들이 거의 이런 **재귀적인** 특징을 지니고 있다. 마을에 존재하는 유일한 이발사 "갑"은 스스로 이발을 하지 않는 모든 사람을 이발하는 사람이다. 그렇다면 이발사 갑은 자신을 이발할 수 있는가? 할 수 없다. 그는 스스로 이발을 하지 않는 모든 사람을 이발하기 때문이다. 그렇다면 남에게 이발을 부탁할 수 있는가? 그럴 수도 없다. 스스로 이발을 하지 않는 모든 사람을 이발해야 하기 때문이다. 
 
 :::{.column-margin}
 보다 상세한 내용은 [여기](https://plato.stanford.edu/entries/russell-paradox/)를 참고하자. 
