--- a/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
+++ b/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
@@ -16,7 +16,7 @@ draft: false
 Julia를 빠르게 세팅하는 방법 (Windows/Macos)
 
 ## 넋두리 
-생성 AI 덕분에 프로그래밍 언어가 필요없어진 시대라지만 이럴 수록 취미 삼아(?) 프로그래밍 언어를 배우기 좋은 시절이 아닌가 싶다. 평소 가장 뛰어난 하이레벨 컴퓨터 언어라고 생각해온 Julia를 윈도우와 Macos에서 빠르게 설치하고, VS Code에서 Jupyter를 통해 활용하는 방법을 소개한다. 
+생성 AI 덕분에 프로그래밍 언어가 필요없어진 시대라지만 이럴 수록 취미 삼아(?) 프로그래밍 언어를 배우기 좋은 시절이 아닐까? 평소 가장 뛰어난 high-level 컴퓨터 언어라고 생각해온 Julia를 윈도와 Macos에서 빠르게 설치하고, VS Code에서 Jupyter를 통해 활용하는 방법을 소개한다. 
 
 물론 이 소개 역시 정리할 내용을 망각할 미래의 나 놈을 위한 것이다!  
 
@@ -27,9 +27,9 @@ Julia를 빠르게 세팅하는 방법 (Windows/Macos)
 
 조금 특이하게 하고 싶다면, 윈도의 경우는 `wingret`을 맥의 경우에는 `brew`를 쓰면 되겠다. 
 
-```shell
-> winget install --id=Julialang.Julia  -e # Windows PowerShell
-> brew install julia # Macos 
+```bash
+> winget install --id=Julialang.Julia  -e # For Windows PowerShell
+> brew install julia # For Macos 
 ```
 
 ## REPL 세팅  
@@ -94,6 +94,7 @@ VS Code로 줄리아용 익스텐션을 부릴 수 있다. 다만, Julia Extensi
 REPL 창에서 `]`을 입력하면 패키지(Pkg) 모드로 진입한다. 만일 다시 줄리아 REPL 창으로 가고 싶으면 백스페이스를 누른다. 
 
 Pkg 창에서 여러가지를 할 수 있지만 일단 여기서는 프로젝트를 시작하는 방법을 알아보자. 아래 보는 것은 `tutorial` 프로젝트 개시를 예시한 것이다. 해당 폴더가 이미 있으면 그 안에 생성된다. 
+
 ```julia
 (@v1.8) pkg> activate tutorial
   [ Info: activating new environment at `~/tutorial/Project.toml`.
@@ -115,10 +116,10 @@ Status `C:\프로젝트-폴더\Project.toml`
 ...
 ```
 
-프로젝트의 개시와 함께 해당 폴더에 `Manifest.toml`, `Project.toml`이 생성된다. 두 파일에 용도에 대해서는 상세하게 다루지는 않겠다. `Manifest.toml`는 해당 폴더의 프로젝트를 진행하기 위한 패키지의 세목(버전, 의존성 등)이 담겨 있다. 자세한 내용은 아래 링크를 참고하자. 
+프로젝트의 개시와 함께 해당 폴더에 `Manifest.toml`, `Project.toml`이 생성된다. 두 파일에 용도에 대해서는 상세하게 다루지는 않겠다. `Manifest.toml`는 해당 폴더의 프로젝트를 진행하기 위한 패키지의 세목(버전, 의존성 등)이 담겨 있다. `Project.toml`은 프로젝트의 메타 데이터를 담고 있다. 자세한 내용은 아래 링크를 참고하자. 
 
 <https://pkgdocs.julialang.org/v1/toml-files/>
 
-내가 생성한 환경 뿐 아니라 다른 사람이 만들어둔 환경을 가져와서 해당 환경과 동일한 환경을 구축할 수도 있다. 상세한 내용은 아래 링크를 참고하면 된다. 
+내가 생성한 환경 뿐 아니라 다른 사람이 만들어둔 환경을 가져와서 해당 환경과 동일한 환경을 구축할 수도 있다. 상세한 내용은 아래 링크를 참고하자. 특히 다른 실행 환경을 가져와 그대로 재현할 수 있는 대목은 Julia 가상 환경의 큰 장점 중 하나이다.  
 
 <https://pkgdocs.julialang.org/v1/environments/>
