--- a/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
+++ b/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
@@ -83,15 +83,13 @@ VS Code로 줄리아용 익스텐션을 부릴 수 있다. 다만, Julia Extensi
 
 ## Julia의 패키지 관리
 
-줄리아의 패키지 관리는 사실 매우 간단하다. Python의 복잡하고 다양한 방법에 비해 놀라운 정도로 간단해서 오히려 혼동될 지경이다. 줄리아 버전 및 패키지 버전 관리 전체를 줄리아에서 통일적으로 담당하며 제어도 굉장히 간단하다.
-
-전체적인 운용 방식은 최근 각광받은 Python의 Poetry 그리고 블로그에서 소개한 Rye와 유사하다. 다만 실행 바이너리와 패키지를 각 프로젝트 별로 모두 설치하지 않는다는 점에서 파이썬 가상 환경에 비해 낭비가 덜하다. 
+줄리아의 패키지 관리는 정말 간단하다! Python의 복잡하고 다양한 방법과 비하면 줄리아의 패키지 관리는 간단해서 오히려 혼동될 정도이다. 전체적인 운용 방식은 최근 각광받은 Python의 Poetry 그리고 이 블로그에서 소개한 Rye와 유사하다. 다만 실행 바이너리와 패키지를 각 프로젝트 별로 모두 설치하지 않는다는 점에서 파이썬 가상 환경에 비해 낭비가 덜하다. 
 
 ### 프로젝트 개시 
 
 <https://pkgdocs.julialang.org/v1/environments/>
 
-REPL 창에서 `]`을 입력하면 패키지(Pkg) 모드로 진입한다. 만일 다시 줄리아 REPL 창으로 가고 싶으면 백스페이스를 누른다. 
+REPL 창에서 `]`을 입력하면 패키지(Pkg) 모드로 진입한다. 줄리아는 자체적인 인터페이스로 패키지를 관리한다. 만일 다시 줄리아 REPL 모드로 가고 싶으면 백스페이스를 누른다. 
 
 Pkg 창에서 여러가지를 할 수 있지만 일단 여기서는 프로젝트를 시작하는 방법을 알아보자. 아래 보는 것은 `tutorial` 프로젝트 개시를 예시한 것이다. 해당 폴더가 이미 있으면 그 안에 생성된다. 
 
@@ -100,23 +98,25 @@ Pkg 창에서 여러가지를 할 수 있지만 일단 여기서는 프로젝트
   [ Info: activating new environment at `~/tutorial/Project.toml`.
 ```
 
-위 창을 보자. `(@v1.8)` 현재 Pkg REPL이 바라보고 있는 폴더를 의미한다. 이는 디폴트 환경으로 해당 환경은 `\Users\{PC-아이디}\.julia\` 와 비슷한 폴더에 담긴 환경을 의미한다.
+최초로 패키지 모드에 진입하면 위와 유사한 터미널 창을 보게 된다. `(@v1.8)` 현재 Pkg REPL이 바라보고 있는 **환경**을 의미한다. 이는 디폴트 환경으로 해당 환경은 `\Users\{PC-아이디}\.julia\` 혹은 이와 유사한 줄리아 디폴트 공유 환경을 바라보게 된다.
 
 Julia REPL에서 해당 폴더로 이동하고 싶다면,
+
 ```julia
 julia> cd("C:\\가고싶은-폴더") # 윈도우에서 
 julia> cd("C:\가고싶은-폴더") # Macos, Ubuntu 
 ```
+
 해당 폴더 안에서 환경을 액티베이트하고 싶다면,
+
 ```julia
-(NEW) pkg> activate .
+(@v1.8) pkg> activate .
 Activating project at `D:\GitHub\{프로젝트-폴더}`
 (프로젝트-폴더) pkg> st
 Status `C:\프로젝트-폴더\Project.toml`
 ...
 ```
-
-프로젝트의 개시와 함께 해당 폴더에 `Manifest.toml`, `Project.toml`이 생성된다. 두 파일에 용도에 대해서는 상세하게 다루지는 않겠다. `Manifest.toml`는 해당 폴더의 프로젝트를 진행하기 위한 패키지의 세목(버전, 의존성 등)이 담겨 있다. `Project.toml`은 프로젝트의 메타 데이터를 담고 있다. 자세한 내용은 아래 링크를 참고하자. 
+위에 보는 것처럼 내가 시작한 프로젝트 폴더를 바라보고 있다는 점을 분명히 알 수 있다. 프로젝트의 개시와 함께 해당 폴더에 `Manifest.toml`, `Project.toml`이 생성된다. 두 파일에 용도에 대해서는 상세하게 다루지는 않겠다. `Manifest.toml`는 해당 폴더의 프로젝트를 진행하기 위한 패키지의 세목(버전, 의존성 등)이 담겨 있다. `Project.toml`은 프로젝트의 메타 데이터를 담고 있다. 자세한 내용은 아래 링크를 참고하자. 
 
 <https://pkgdocs.julialang.org/v1/toml-files/>
 
