--- a/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
+++ b/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
@@ -204,4 +204,4 @@ test = ["Test"]
 (Example) pkg> rm ThinkJulia
 ```
 
-환경과 관련되었던 내용들이 제거된다. 가끔 `gc` 명령을 수행해야 할 수도 있는데, REPL에 출력된 내용을 참고하면 된다. 제거한 후 `Project.toml`을 확인해보면 `[deps]` 항목이 제거되었음을 알 수 있다. 
+위 명령을 통해 환경과 관련된 항목들이 제거된다. 가끔 `gc` 명령의 실행이 필요할 수 있다. REPL에 출력된 내용을 참고하자. 제거한 후 `Project.toml`을 확인해보면 `[deps]` 항목이 제거되었음을 알 수 있다. `Project.toml`과 `Manifest.toml`은 이렇게 환경에 발생하는 패키지 및 바이너리의 변화를 알아서 기록하고 추적한다. 
