--- a/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
+++ b/posts/computer-tool/2023-08-15-julia-quicksilver.qmd
@@ -7,9 +7,14 @@ image: "./images/tools.jpg"
 categories: [computer-tool]
 filters:
    - lightbox
+   #- line-highlight
 lightbox: auto
 #jupyter: python3
 draft: false
+format:
+  html:
+    code-line-numbers: true
+    highlight-style: arrow
 ---
 
 ## TL; DR
@@ -198,10 +203,10 @@ Test = "*******-e22c-****-****-65c5234f0b40"
 test = ["Test"]
 ```
 
-`[deps]` 항목에 해당 패키지의 이름이 `ThinkJulia`로 표기되어 있음을 알 수 있다. 
+`[deps]` 항목에 환경이 의존하는 패키지 `ThinkJulia`가 기록되어 있다. 
 
 ```julia 
 (Example) pkg> rm ThinkJulia
 ```
 
-위 명령을 통해 환경과 관련된 항목들이 제거된다. 가끔 `gc` 명령의 실행이 필요할 수 있다. REPL에 출력된 내용을 참고하자. 제거한 후 `Project.toml`을 확인해보면 `[deps]` 항목이 제거되었음을 알 수 있다. `Project.toml`과 `Manifest.toml`은 이렇게 환경에 발생하는 패키지 및 바이너리의 변화를 알아서 기록하고 추적한다. 
+위 명령을 통해 환경과 관련된 항목들이 제거된다. 가끔 `gc` 명령의 실행이 필요할 수 있다. REPL에 출력된 내용을 참고하자. 제거한 후 `Project.toml`을 확인해보면 `[deps]` 항목이 제거되었음을 알 수 있다. 이렇듯 `Project.toml`과 `Manifest.toml`은 환경에 발생하는 패키지 및 바이너리의 변화를 알아서 기록하고 추적한다. 이 얼마나 편리한가! 
