--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -1,5 +1,5 @@
 ---
-title: 조건 명제 
+title: 조건 명제 그리고 부정 
 description: $\implies$를 따져보자
 author: "JS HUHH"
 date: "06/26/2023"
@@ -19,7 +19,7 @@ lightbox: auto
 
 ## 조건 명제 
 
-조건 명제는 잘 아는 듯싶지만, 내게는 가끔 혼란의 시간이 찾아오더라. 이 기회에 생각나는 대로 한번 정리해 보겠다.
+조건 명제는 잘 아는 듯싶지만, 내게는 가끔 혼란의 시간이 찾아오더라. 이 기회에 생각나는 대로 한번 정리해 보겠다. 아울러 극한의 정의까지 응용편으로 살펴보겠다. 
 
 ## 용어 정리 
 
@@ -63,7 +63,7 @@ lightbox: auto
 
 조건 명제의 '부정'은 어떻게 될까? 조건 명제를 $p \implies q$의 형태로 놓고 부정 명제를 떠올리기는 쉽지 않다. 대신 $\neg p \lor q$의 부정 명제를 만들어보자. $\neg(\neg p \lor q) = p \land \neg q$가 된다. 
 
-직관적으로 생각해보자. 배중률에 따르면 $p \implies q$가 성립하지 않는 경우가 단 하나라도 존재하면 해당 부정형이 참이 된다. 즉, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \implies q$에서 $p$가 $\forall$의 전칭 한정기호를 달고 있다면, 조건 명제의 부정형에서 $p$는 $\exists$의 존재 한정기호 달고 있다. 진리 집합으로 서술하면 $P \cap Q^C \neq \emptyset$이 성립하면 된다.
+직관적으로 생각해보자. 배중률에 따르면 $p \implies q$가 성립하지 않는 경우가 단 하나라도 존재하면 해당 부정형이 참이 된다. 즉, $p$를 만족하는 경우 중에서 $\neg q$를 만족하는 것이 존재하면 된다. 앞서 $p \implies q$에서 $p$가 $\forall$의 전칭 한정기호를 달고 있다면, 조건 명제의 부정형에서 $p$는 $\exists$의 존재 한정기호 달고 있다. 진리 집합으로 서술하면 $P \cap Q^C \neq \varnothing$이 성립하면 된다.
 
 ## 함수의 극한 
 
@@ -90,18 +90,27 @@ lightbox: auto
 - $x=a$ 주변으로 양쪽으로 **어떤** $\delta$ 크기의 구간을 잡는다.  
 - 해당 구간에 속하는 **모든** $x$를 고려하자. 
 - $x \to a$ 일 때 함수 $f(x)$의 극한값을 $L$이라고 하자. 
-- $\delta$를 조정해서 $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 **모든** $\epsilon>0$보다 작게 만들 수 있다. 즉, 조건을 만족하는 $\delta$가 존재한다. 
+- $\delta$를 조정해서 $f(x)$와 $L$ 사이의 거리($|f(x)-L|$)가 **모든** $\epsilon>0$보다 작게 만들 수 있다. 즉, 이 조건을 만족하는 $\delta$가 존재한다. 
+
+양화사(quantifier)에 각별히 주의하자. 해당 명제의 부정을 정의할 때 골치거리가 되는 것이 바로 이 녀석이다. 
 
 ### 함수의 극한이 존재하지 않는 경우 
 
-함수의 극한에 관한 정의의 '부정형(negation)'을 정의해보자. 그리고 이 부정의 정의가 참이 되는 경우를 따져볼 것이다. 정의가 함축(implication, $\implies$)의 형태를 취하고 있으므로 부정형을 만들 때 앞서 언급한 방식을 따르면 된다. 
+이제 함수의 극한에 관한 정의의 '부정(negation)'을 만들어 보자. 덤으로 이 부정형이 참이 되는 경우, 즉 극한이 존재하지 않는 경우도 살펴볼 것이다. 정의가 함축(implication, $\implies$)의 형태를 취하고 있으므로 부정을 만들 때 앞서 살펴본 방식을 따르면 된다. 
 
-$0 < |x-a|< \delta$을 만족하는 모든 $\delta>0$에 대해서 다음을 만족하는 어떤 $\epsilon>0$와 $x \in \mathbb R$이 존재한다; $|f(x) - L| \geq \epsilon$. 
+그런데 문제가 되는 것은 양화사다. 질문은 다음과 같다. 
 
-역시 말로 구별해서 풀어보자. 
+- 양화사를 $p$와 $q$의 조건이 넣어서 함축 명제의 부정을 만들어야 할까? 
+- 아니면 영화사는 별도로 처리해줘야 할까? 
 
-- $a$의 **모든** 주변($\delta$의 크기)에 속한 **어떤** $x$를 고려하자.
-- $|f(x)-L|$ 값을 **어떤** $\epsilon$ 보다 낮게 줄일 수 없다. 
+결국 정의의 취지가 무엇인지에 달려 있다. 극한의 정의를 보면 존재하는 세 개의 양화사가 전제 조건으로 제시되어 있다. 따라서 함축과는 별도로 다루는 것이 타당할 것이다. 양화사는 부정을 취할 때 반대로 바뀌게 된다. 즉, 
+
+> 모든 $\delta>0$에 대해서 다음을 만족하는 어떤 $\epsilon>0$와 어떤 $x \in \mathbb R$이 존재한다; $0 < |x-a| < \delta$와 $|f(x) - L| \geq \epsilon$를 동시에 만족한다.  
+
+구별해서 풀어보자. 
+
+- $a$의 **모든** 주변($\delta$의 크기)에 속한 **어떤** $x$를 고려하자.모든 $\delta>0$이므로 $a$ 주변의 지극히 극소한(?) 범위에서까지 만족해야 한다. 이것은 매우 강한 조건이다. 원래 정의에서 $\epsilon$에 대해서 강한 조건이었다면 이것이 $\delta$로 바뀐 셈이다. 
+- $|f(x)-L|$ 값을 **어떤** $\epsilon$ 보다 낮게 줄일 수 없는 $x$가 존재한다. 
 
 이 경우는 $\lim_{x \to a}f(x)$는 존재하지 않는다. 
 
