--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -21,7 +21,7 @@ format:
 의존성이라는 지옥을 벗어나보자. 
 
 ## 넋두리 
-심각한 프로젝트를 하지 않는다면, '의존성'은 문제가 되지 않을 수 있다. 하지만 습관을 잘 들여놓아야 심각한 상황이 왔을 때 적응력이 높아지는 법이다. 지난 번 소개했던 RYE와 유사한 의존성 관리 도구 pixi를 소개한다. 아직 극초기 프로젝트지만 개인 프로젝트인 RYE와 달리 pixi는 조금 더 체계적인 지원 체계를 갖출 듯 싶다. 
+심각한 프로젝트를 하지 않는다면 '의존성'이 문제가 되지 않을 수 있다. 하지만 습관을 잘 들여놓아야 심각한 상황이 왔을 때 대처가 가능한 법이다. 지난 번 소개했던 RYE와 유사한 의존성 관리 도구 pixi를 소개한다. 아직 극초기 프로젝트지만 개인 프로젝트인 RYE와 달리 pixi는 조금 더 체계적인 지원 체계를 갖출 듯 싶다. 
 
 ## 설치 
 
@@ -49,7 +49,7 @@ pixi의 경우 다음과 같은 특징을 지닌다.
 > pixi add python pandas plotly 
 ```
 
-pixi가 필요한 패키지를 콘더 리포지터리에서 끌어와 설치한다. 만일 터미널에서 활용하고 싶다면 `pixi shell`을 치면 된다. `pixi`를 치면 필요한 명령어를 보여준다. 
+pixi가 필요한 패키지를 콘다 리포지터리에서 끌어와 설치한다. 만일 터미널에서 활용하고 싶다면 `pixi shell`을 치면 된다. `pixi`를 치면 필요한 명령어를 보여준다. 
 
 pixi의 장점은 os별로 구별해서 패키지를 관리할 수 있다는 것이다. 환경을 담고 있는 `pixi.toml`을 열어보면 이 점을 쉽게 알 수 있다. 
 
@@ -57,13 +57,13 @@ pixi의 장점은 os별로 구별해서 패키지를 관리할 수 있다는 것
 
 ## VS Code 
 
-VS Code에서 `.ipynb`로 작업하고 싶다면 간단하다. 커널 즉 필요한 파이썬 바이너리를 선택해주면 된다. 
+VS Code에서 `.ipynb`로 작업하고 싶다면 간단하다. 커널 즉 필요한 파이썬 실행 파일을 선택해주면 된다. 
 
 :::{.callout-tip}
 `F1` > `Python: 인터프리터 선택` > `+인터프리터 경로 입력...`
 :::
 
-해당 프로젝트 폴더 안에 `.pixi`로 가자. OS 별로 구별해서 파이썬 바이너를 선택하면 된다. 
+해당 프로젝트 폴더 안에 `.pixi`로 가자. OS 별로 구별해서 파이썬 바이너리 혹은 스크립트를 선택하면 된다. 
 
 - (macos) `.pixi/env/bin/pyhon`
 - (windows)
