--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -3,7 +3,7 @@ title: "pixi"
 description: 의존성 지옥을 벗어날 또 다른 방법 
 author: "JS HUHH"
 date: "08/27/2023"
-image: "./images/cat-coder.png"
+image: "./images/pixi.webp"
 categories: [computer-tool]
 filters:
    - lightbox
