--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -88,6 +88,10 @@ platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 
 VS Code에서 `.ipynb`로 작업하고 싶다면 간단하다. 해당 폴더가 작업 폴더로 잡혀 있다면, 아마도 `.pixi...` 아래 커널이 선택가능할 것이다. 그렇지 않다면 커널을 직접 선택해주면 된다. 
 
+:::{.column-margin}
+VS Code에서 `파일` > `작업 영역에 폴더 추가`를 통해 작업 폴더를 지정할 수 있다. 터미널의 해당 폴더에서 `code .`을 실행해도 된다. 
+:::
+
 :::{.callout-tip}
 `F1` > `Python: 인터프리터 선택` > `+인터프리터 경로 입력...`
 :::
