--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -92,7 +92,7 @@ VS Code에서 `.ipynb`로 작업하고 싶다면 간단하다. 해당 폴더가 
 VS Code에서 `파일` > `작업 영역에 폴더 추가`를 통해 작업 폴더를 지정할 수 있다. 터미널의 해당 폴더에서 `code .`을 실행해도 된다. 
 :::
 
-:::{.callout-tip}
+:::{.callout-tip title="인터프리터 경로 설정"}
 `F1` > `Python: 인터프리터 선택` > `+인터프리터 경로 입력...`
 :::
 
