--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -21,7 +21,7 @@ format:
 의존성이라는 지옥을 벗어나보자. 
 
 ## 넋두리 
-심각한 프로젝트를 하지 않는다면 '의존성'이 문제가 되지 않을 수 있다. 하지만 습관을 잘 들여놓아야 심각한 상황이 왔을 때 대처가 가능한 법이다. 지난 번 소개했던 RYE와 유사한 의존성 관리 도구 pixi를 소개한다. 아직 극초기 프로젝트지만 개인 프로젝트인 RYE와 달리 pixi는 조금 더 체계적인 지원 체계를 갖출 듯 싶다. 
+심각한 프로젝트를 하지 않는다면 '의존성'이 문제가 되지 않을 수 있다. 하지만 습관을 잘 들여놓아야 심각한 상황이 왔을 때 대처가 가능한 법이다. 지난 번 소개했던 [RYE](https://www.lostineconomics.com/posts/computer-tool/2023-05-29-rye.html)와 유사한 의존성 관리 도구 pixi를 소개한다. 아직 극초기 프로젝트지만 개인 프로젝트인 RYE와 달리 pixi는 조금 더 체계적인 지원 체계를 갖출 듯 싶다. 
 
 ## 설치 
 
