--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -23,6 +23,10 @@ format:
 ## 넋두리 
 심각한 프로젝트를 하지 않는다면 '의존성'이 문제가 되지 않을 수 있다. 하지만 습관을 잘 들여놓아야 심각한 상황이 왔을 때 대처가 가능한 법이다. 지난 번 소개했던 [RYE](https://www.lostineconomics.com/posts/computer-tool/2023-05-29-rye.html)와 유사한 의존성 관리 도구 pixi를 소개한다. 아직 극초기 프로젝트지만 개인 프로젝트인 RYE와 달리 pixi는 조금 더 체계적인 지원 체계를 갖출 듯 싶다. 
 
+:::{.column-margin}
+개발팀은 Rust의 `cargo` 명령어를 지향한다고 하며, 언어를 가리지 않지만 의존성 지옥에 가장 취약할 python에서 누릴 수 있는 이득이 가장 클 것이라고 밝히고 있다. 혹시나 해서 julia를 태워 봤는데 지원되지 않았다. 현재로서 랭귀지 지원은 제한적인 듯 싶다. 
+:::
+
 ## 설치 
 
 <https://prefix.dev/docs/pixi/overview#installation>
@@ -83,6 +87,41 @@ platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 ```
 
 아래와 같이 메시지를 띄워준다. `pixi.toml` 파일을 열어 해당 플랫폼을 추가한 후 다시 `pixi install`을 실행하면 된다. 만일 에러가 뜬다면 셸 창을 다시 실행하자. 플랫폼 별 의존성을 세밀하게 정의해 설치하거나 이를 `pixi.toml`에 지정할 수 있다. 자세한 것은 [여기](https://prefix.dev/docs/pixi/advanced/multi_platform_configuration)를 참고하도록 하자. 
+
+### Example 
+
+아마도 멀티플랫폼 지원이 pixi의 가장 큰 장점이 아닐까 싶다. pytorch를 인스톨하는 경우를 떠올려보자. 플랫폼A는 Windows + Nvidia GPU를 운용하며, 플랫폼B는 Silicon mac 기반의 macos이다. 하나의 `pixi.toml` 파일을 통해서 각기 다른 플랫폼에서 파이토치 프로젝트를 유지하는 것이 목표이다. 
+
+```{.toml filename="pixi.toml"}
+[project]
+name = "pixi_pytorch"
+version = "0.1.0"
+description = "Add a short description here"
+authors = ["Junsok Huhh <anarinsk@gmail.com>"]
+channels = ["conda-forge", "pytorch", "nvidia"]
+platforms = ["win-64", "osx-arm64"]
+
+[tasks]
+
+[target.win-64.dependencies]
+pytorch-cuda = "11.8.*"
+torchaudio = "2.0.2.*"
+pytorch = "2.0.1.*"
+torchvision = "0.15.2.*"
+
+[target.osx-arm64.dependencies]
+pytorch = "2.0.1.*"
+torchvision = "0.15.2.*"
+
+[dependencies]
+ipykernel = "6.25.1.*"
+```
+
+- `target`은 플랫폼별로 특화된 분기를 지정할 수 있다. 
+  - `.`이후 플랫폼, 그리고 지정할 pixi 영역이 붙는다. 
+  - 지정 가능한 pixi 영역은 `activation`, `dependencies`, `tasks` 세 가지이다. 
+
+`pixi.toml`을 플랫폼A에서 실행하면 `.pixi\` 폴더 아래 cuda 기반의 파이토치가 설치된다. 플랫폼B에서는 mps용 파이토치가 설치된다. 
 
 ## VS Code 
 
