--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -23,6 +23,8 @@ format:
 ## 넋두리 
 심각한 프로젝트를 하지 않는다면 '의존성'이 문제가 되지 않을 수 있다. 하지만 습관을 잘 들여놓아야 심각한 상황이 왔을 때 대처가 가능한 법이다. 지난 번 소개했던 [Rye](https://www.lostineconomics.com/posts/computer-tool/2023-05-29-rye.html)와 유사한 의존성 관리 도구 pixi를 소개한다. 아직 극초기 프로젝트지만 아직은 개인 프로젝트인 Rye와 달리 pixi는 조금 더 체계적인 지원 체계를 갖출 듯 싶다. 나는 OS 플랫폼 별로 별도의 의존성 등을 할당할 수 있는 대목이 제일 마음에 들었다. 
 
+파이썬은 많은 의존성 관리 도구를 지니고 있지만 사실 좀 골치가 아프다. 일단 OS를 탄다. 그리고 의존성 관리에 필수적인 가상 환경도 주로 쓰는 하나가 아니다. 이렇다보니 조합이 이래저래 복잡해진다. 본격적으로 쓰려면 [Poetry](https://python-poetry.org/) 같은 녀석을 부려야 하겠지만, 적당히 문과적 수준에서 타협할 녀석이 있었으면 했다. Rye와 pixi가 딱 그 정도에 적합하다.  
+
 :::{.column-margin}
 개발팀은 Rust의 `cargo` 명령어를 지향한다고 하며, 언어를 가리지 않지만 의존성 지옥에 가장 취약할 python에서 누릴 수 있는 이득이 가장 클 것이라고 밝히고 있다. 혹시나 해서 julia를 태워 봤는데 지원되지 않았다. 현재로서 랭귀지 지원은 제한적인 듯 싶다. 
 :::
