--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -98,6 +98,8 @@ platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 자세한 것은 [여기](https://prefix.dev/docs/pixi/advanced/multi_platform_configuration)를 참고하도록 하자. 
 :::
 
+GitHub를 통해 여러 플랫폼에서 코드를 반복 사용하는 경우를 생각해보자. `.pixi/env` 아래 폴더에 바이너리 및 패키지가 저장된다. 만일 GitHub를 통해 `.ignore`를 설정했다면 `env` 아래 폴더가 모두 무시되므로 플랫폼 별로 다른 바이너리가 GitHub로 동기화되지는 않는다. 
+
 ### Example 
 
 아마도 멀티플랫폼 지원이 pixi의 가장 큰 장점이 아닐까 싶다. pytorch를 인스톨하는 경우를 떠올려보자. 
