--- a/posts/computer-tool/2023-05-11-powershell.qmd
+++ b/posts/computer-tool/2023-05-11-powershell.qmd
@@ -127,6 +127,8 @@ oh-my-posh init pwsh --config "$env:POSH_THEMES_PATH/jandedobbeleer.omp.json" | 
 > oh-my-posh init pwsh --config "$env:POSH_THEMES_PATH/powerlevel10k_modern.omp.json" | Invoke-Expression
 ```
 
+만일 `$env:POSH_THEMES_PATH`를 쓰지 않고 특정한 디렉토리의 설정 json 파일을 가져오고 싶다면, 해당 디렉토리를 직접 지정하면 된다. 
+
 ### 업데이트 시 테마가 초기화되는 문제 
 
 `$env:POSH_THEMES_PATH`의 위치에 따라서 업데이트 시 테마까지 함께 업데이트가 된다. 만일 해당 테마의 json 파일을 바꾸었다면 업데이트가 되면서 초기화된다. 어차피 테마 파일의 위치는 자유롭게 바꿀 수 있으니까 자신이 커스텀한 테마 파일의 위치를 바꾸고 녀석을 로드하면 된다. 
