--- a/posts/walk-through/2023-09-21-my-beelink.qmd
+++ b/posts/walk-through/2023-09-21-my-beelink.qmd
@@ -30,8 +30,8 @@ format:
 
 일단 최대한 싸고 간단하게 구축하는 것이 목표였다. 싸다는 대목에서 라즈베리 파이를 고민했으나 이런 저런 부품을 구비하려면 비용이 만만치 않더라. 알리익스를 검색해보니, N95와 같은 준수한 저전력 x86 CPU를 장착한 베이본 물건이 13만원 정도면 살 수 있더라. 윈도OS도 필요 없고 메모리와 nvme SSD는 이미 굴러다니는 게 있어서 이 베어본을 구매했다. 말 그대로 램과 SSD가 빠진 깡통이 온다. 16GB 메모리는 약 5.5만원 정도, 512GB SSD는 4만원 정도면 구매하니, 대략 10만원 정도 더하면 쓸만한 서버를 살 수 있는 셈이다. 
 
-![](./images/beelink.webp){width="40%"}
-<https://www.aliexpress.com/item/1005005305248100.html>
+![<https://www.aliexpress.com/item/1005005305248100.html>](./images/beelink.webp){width="40%" fig-align="left"}
+
 
 ## 우분투 설치 
 
