--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -23,7 +23,7 @@ lightbox: auto
 
 ## 용어 정리 
 
-- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률(law of excluded middle)에 따르면 명제는 참 혹은 거짓 중 하나만 될 수 있다. 둘 모두가 참이거나 둘 모두 거짓인 상태는 없다고 가정한다.
+- 명제: 참과 거짓을 가릴 수 있는 언술을 의미한다. 배중률(law of excluded middle)에 따르면 명제는 참 혹은 거짓 중 하나만 될 수 있다. 참과 거짓이 동시에 성립하거나 혹은 동시에 성립하지 않거나 할 수 없다. 
 - 진리 집합: "모든 인간은 죽는다"와 같은 명제는 특별한 조건 없이 참과 거짓을 할당할 수 있다. 명제에서 주어와 술어를 분리하고 술어를 충족하는 일정한 대상을 살피면 편리할 수 있다. 명제가 나타내고 싶은 어떤 조건을 술어(predicate)라고 부른다. 그리고 명제의 술어를 충족하는 어떤 대상, 즉 술어를 충족하는 주어를 모은 집합을 '진리 집합'이라고 정의한다.
 
 명제를 진리 집합과 연결해 생각하면 편리할 때가 있다. 명제의 여러 가지 조작을 집합으로 바꿔 생각하면 익숙한 '벤 다이어그램'을 활용할 수 있다.
